# tyzen

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TYZEN.llm.md  TYZEN.md  lefthook.yml
docs/: README.md  v0.2.0.changelog.md  v0.2.1.changelog.md  v0.2.2.changelog.md  v0.2.3.changelog.md  v0.2.4.changelog.md
docs/v0.2.0/: llm-contract.md  reference.md
docs/v0.2.1/: llm-contract.md  reference.md
docs/v0.2.2/: changelog.md  llm-contract.md  references.md
tyzen/: Cargo.toml
tyzen-macro/: Cargo.toml
tyzen-macro/src/: command_attr.rs  event_attr.rs  export_attr.rs  lib.rs  type_derive.rs  utils.rs
tyzen-macro/src/type_derive/: attr.rs  case.rs  logic.rs  metadata.rs  mod.rs
tyzen-tauri/: Cargo.toml
tyzen-tauri/src/: lib.rs
tyzen-tauri/tests/: channel_support.rs
tyzen/bench/: README.md
tyzen/bench/results/: build-time-delta-latest.json  cold-generate-latest.json  e2e-heavy-latest.json  e2e-latest.json  latest.json
tyzen/bench/scripts/: run_build_time_delta.sh  run_cold_generate.sh
tyzen/benches/: codegen.rs  e2e.rs  e2e_heavy.rs
tyzen/examples/: cold_baseline.rs  cold_generate_fixture.rs
tyzen/src/: generator.rs  lib.rs  meta.rs  registry.rs  renderer.rs
tyzen/src/ts_type/: arrays.rs  collections.rs  external.rs  mod.rs  option.rs  primitives.rs  result.rs  tuples.rs  wrappers.rs
tyzen/src/utils/: mod.rs  string.rs
tyzen/tests/: auto_naming.rs  channel_support.rs  const_export.rs  enum_shapes.rs  global_optional.rs  missing_template.rs  module_namespaces.rs  namespaces.rs  optional_fields.rs  optional_validation.rs  result_error.rs  serde.rs  serde_parity.rs  serde_rename.rs  serde_skip.rs  struct_shapes.rs  validation_sync.rs  variant_metadata.rs  variant_metadata_templates.rs
tyzen/tests/ui/: optional_non_option.rs  optional_non_option.stderr
