[package]
name = "tyzen-macro"
version = "0.1.10"
description = "Procedural macros for the tyzen crate."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tyzen-rs/tyzen"
homepage = "https://github.com/tyzen-rs/tyzen"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
