[package]
name = "tyzen-macro"
version = "0.2.0"
description = "Procedural macros for the tyzen crate."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tyzen-rs/tyzen"
homepage = "https://github.com/tyzen-rs/tyzen"
readme = "../README.md"
keywords = ["tauri", "typescript", "codegen", "bindings", "macros"]
categories = ["development-tools::ffi", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
