[package]
name = "tyzen-tauri"
version = "0.2.1"
description = "Tauri integration for tyzen that automatically collects and registers all Tauri commands with a single macro."
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tyzen-rs/tyzen"
homepage = "https://github.com/tyzen-rs/tyzen"
readme = "../README.md"
keywords = ["tauri", "typescript", "codegen", "bindings", "ipc"]
categories = ["development-tools::ffi", "web-programming"]

[dependencies]
tyzen = { version = "0.2.1", path = "../tyzen" }
tyzen-macro = { version = "0.2.1", path = "../tyzen-macro" }
inventory = "0.3.24"
tauri = "^2"
